native/include/logger.h

/* Code generated by go run ./cmd/codegen; DO NOT EDIT. */
/* Source of truth: api/abi.json */

#ifndef EXIMIETAS_LOGGER_H
#define EXIMIETAS_LOGGER_H

#ifdef __cplusplus
extern "C" {
#endif

#ifdef _WIN32
#  ifdef LOGGER_BUILD
#    define LOGGER_API __declspec(dllexport)
#  else
#    define LOGGER_API __declspec(dllimport)
#  endif
#else
#  define LOGGER_API __attribute__((visibility("default")))
#endif

#include <stddef.h>

/* Opaque logger handle (non-NULL when valid; never dereference it). */
typedef void* logger_handle;

/* Integer levels (stable ABI). */
enum LoggerLevel {
  LOGGER_TRACE = 0,
  LOGGER_DEBUG = 1,
  LOGGER_INFO = 2,
  LOGGER_WARN = 3,
  LOGGER_ERROR = 4,
  LOGGER_FATAL = 5
};

/* Library / ABI versioning. */
LOGGER_API const char* logger_version(void);

/* currently 1 */
LOGGER_API int logger_abi_version(void);

/*
 * Create a logger from JSON config (schema v1).
 * Returns a non-NULL handle on success, NULL on failure.
 * On failure, call logger_last_error(NULL) for the message.
 */
LOGGER_API logger_handle logger_create_v1(const char* config_json);

/* Alias of logger_create_v1 for early consumers. */
LOGGER_API logger_handle logger_create(const char* config_json);

/*
 * Emit a structured log.
 * fields_json may be NULL or "{}" for no extra fields.
 * Returns 0 on success, -1 on failure.
 */
LOGGER_API int logger_log(logger_handle handle, int level, const char* message, const char* fields_json);

/* Emit a log with no extra fields. */
LOGGER_API int logger_log_simple(logger_handle handle, int level, const char* message);

/* Replace runtime context fields (merged into every subsequent log). */
LOGGER_API int logger_set_fields(logger_handle handle, const char* fields_json);

/* Hot-reload configuration JSON. */
LOGGER_API int logger_reload_config(logger_handle handle, const char* config_json);

/* Drain async queue and sync sinks. */
LOGGER_API int logger_flush(logger_handle handle);

/* Stop worker, flush, and free the logger. */
LOGGER_API int logger_close(logger_handle handle);

/*
 * Stats JSON: {"queued":N,"dropped":N,"flushed":N,"bytes_written":N}
 * Pointer is owned by the library until the next logger_stats/logger_last_error
 * call on the same handle, or logger_close. Do not free it.
 * Returns NULL for an invalid handle; logger_last_error(NULL) then explains it.
 */
LOGGER_API const char* logger_stats(logger_handle handle);

/*
 * Last error for the handle. Pass NULL for global create/load errors.
 * Pointer is owned by the library until the next error/stats call on that
 * scope (handle or global), or logger_close. Do not free it.
 */
LOGGER_API const char* logger_last_error(logger_handle handle);

/*
 * Optional free helper. Current ownership policy does not require callers
 * to free strings returned by logger_stats / logger_last_error.
 */
LOGGER_API void logger_free_string(char* s);

#ifdef __cplusplus
}
#endif

#endif /* EXIMIETAS_LOGGER_H */