bindings/dotnet/Eximietas.Logger/NativeMethods.Generated.cs

// <auto-generated />
// Code generated by go run ./cmd/codegen; DO NOT EDIT.
// Source of truth: api/abi.json

#nullable enable
using System.Runtime.InteropServices;

namespace Eximietas.Logger;

public enum Level
{
    Trace = 0,
    Debug = 1,
    Info = 2,
    Warn = 3,
    Error = 4,
    Fatal = 5,
}

internal static partial class NativeMethods
{
    private const string LibraryName = "logger";

    /// <summary>Library / ABI versioning.</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr logger_version();

    /// <summary>currently 1</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int logger_abi_version();

    /// <summary>Create a logger from JSON config (schema v1).</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr logger_create_v1([MarshalAs(UnmanagedType.LPUTF8Str)] string configJson);

    /// <summary>Alias of logger_create_v1 for early consumers.</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr logger_create([MarshalAs(UnmanagedType.LPUTF8Str)] string configJson);

    /// <summary>Emit a structured log.</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int logger_log(
        IntPtr handle,
        int level,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string message,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? fieldsJson);

    /// <summary>Emit a log with no extra fields.</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int logger_log_simple(
        IntPtr handle,
        int level,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string message);

    /// <summary>Replace runtime context fields (merged into every subsequent log).</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int logger_set_fields(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string fieldsJson);

    /// <summary>Hot-reload configuration JSON.</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int logger_reload_config(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string configJson);

    /// <summary>Drain async queue and sync sinks.</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int logger_flush(IntPtr handle);

    /// <summary>Stop worker, flush, and free the logger.</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int logger_close(IntPtr handle);

    /// <summary>Stats JSON: {"queued":N,"dropped":N,"flushed":N,"bytes_written":N}</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr logger_stats(IntPtr handle);

    /// <summary>Last error for the handle. Pass NULL for global create/load errors.</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr logger_last_error(IntPtr handle);

    /// <summary>Optional free helper. Current ownership policy does not require callers</summary>
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void logger_free_string(IntPtr s);

}
